# hse_project_time_series

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebook/: analysis_results.ipynb
results/: clusters.pkl
results/boxcox/: metrics_baseline.csv  metrics_by_cluster.csv  metrics_cb.csv  predictions.pkl
results/diff/: metrics_baseline.csv  metrics_by_cluster.csv  metrics_cb.csv  predictions.pkl
results/log1p/: metrics_by_cluster.csv  metrics_cb.csv  predictions.pkl
results/null/: metrics_by_cluster.csv  metrics_cb.csv  predictions.pkl
src/: baselines.py  cli.py  clusters.py  metrics.py  modeling.py  plots.py  transforms.py
src/results/: analysis_results.ipynb
